--- a/sass/partials/_footer-three.scss
+++ b/sass/partials/_footer-three.scss
@@ -4,7 +4,7 @@
       padding-top: 130px;
 
       @include sm {
-        padding-top: 100px;
+        padding-top: 70px;
       }
 
       .footer-widget {
